# carla-mcp-server

./: .gitignore  CLAUDE.md  README.md  SUMO-MCP技术分析报告.md  main.py  mcphttphealthcheck.py  my_client.py  my_server.py  pyproject.toml  test_new_solution.py  代码总结文档.md
carla-mcp-server/: README.md  claude-mcp-config.md  mcp-config.json  pyproject.toml  start_http_mcp.bat  start_mcp.bat
carla-mcp-server/config/: carla_config.yaml
carla-mcp-server/examples/: basic_mcp_test.py  clean_demo.py  connect_test.py  direct_test.py  http_client_test.py  interactive_demo.py  manual_connect_test.py  mcp_client.py  simple_http_test.py  simple_mcp_client.py  simple_test.py  test_client.py
carla-mcp-server/src/: __init__.py  carla_manager.py  carla_tools.py  mcp_server.py
