[project]
name = "carla-mcp-server"
version = "0.1.0"
description = "MCP server for controlling CARLA simulator through natural language"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=2.11.3",
    "carla==0.9.15",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"